<resources>
    <string name="app_name">LoginAndSignup</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>

    <string name="result">result</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="details">DETAILS</string>
    <string name="button1">Button</string>
    <string name="update">update</string>
    <string name="logout">logout</string>
    <string name="scan_it">scan it</string>
    <string name="update_it">update_it</string>
    <string name="status">Status</string>
    <string name="scan">scan</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="confirm_password">confirm_password</string>
    <string name="department">Department</string>
    <string name="title_activity_forgetpass">forgetpass</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
